Collectors.tolist and test cases fix