@@ -143,7 +143,7 @@ public class SendgridServiceTest {
         EmailNotificationDetails emailNotificationDetails = EmailNotificationDetails.builder()
             .emailAddress("test@email.com")
             .servedParty(SERVED_PARTY_APPLICANT_SOLICITOR)
-            .docs(documentList.stream().map(s -> element(s)).collect(Collectors.toList()))
+            .docs(documentList.stream().map(s -> element(s)).toList())
             .attachedDocs(String.join(",", documentList.stream().map(a -> a.getDocumentFileName()).collect(
                 Collectors.toList())))
             .timeStamp(currentDate).build();
@@ -228,7 +228,7 @@ public class SendgridServiceTest {
         EmailNotificationDetails emailNotificationDetails = EmailNotificationDetails.builder()
             .emailAddress("test@email.com")
             .servedParty(SERVED_PARTY_APPLICANT_SOLICITOR)
-            .docs(documentList.stream().map(s -> element(s)).collect(Collectors.toList()))
+            .docs(documentList.stream().map(s -> element(s)).toList())
             .attachedDocs(String.join(",", documentList.stream().map(a -> a.getDocumentFileName()).collect(
                 Collectors.toList())))
             .timeStamp(currentDate).build();
@@ -329,7 +329,7 @@ public class SendgridServiceTest {
         EmailNotificationDetails emailNotificationDetails = EmailNotificationDetails.builder()
             .emailAddress("test@email.com")
             .servedParty(SERVED_PARTY_APPLICANT_SOLICITOR)
-            .docs(documentList.stream().map(s -> element(s)).collect(Collectors.toList()))
+            .docs(documentList.stream().map(s -> element(s)).toList())
             .attachedDocs(String.join(",", documentList.stream().map(a -> a.getDocumentFileName()).collect(
                 Collectors.toList())))
             .timeStamp(currentDate).build();
@@ -435,7 +435,7 @@ public class SendgridServiceTest {
         EmailNotificationDetails emailNotificationDetails = EmailNotificationDetails.builder()
                 .emailAddress("test@email.com")
                 .servedParty(SERVED_PARTY_APPLICANT_SOLICITOR)
-                .docs(documentList.stream().map(s -> element(s)).collect(Collectors.toList()))
+                .docs(documentList.stream().map(s -> element(s)).toList())
                 .attachedDocs(String.join(",", documentList.stream().map(a -> a.getDocumentFileName()).collect(
                         Collectors.toList())))
                 .timeStamp(currentDate).build();
@@ -527,7 +527,7 @@ public class SendgridServiceTest {
         EmailNotificationDetails emailNotificationDetails = EmailNotificationDetails.builder()
                 .emailAddress("test@email.com")
                 .servedParty(SERVED_PARTY_APPLICANT_SOLICITOR)
-                .docs(documentList.stream().map(s -> element(s)).collect(Collectors.toList()))
+                .docs(documentList.stream().map(s -> element(s)).toList())
                 .attachedDocs(String.join(",", documentList.stream().map(a -> a.getDocumentFileName()).collect(
                         Collectors.toList())))
                 .timeStamp(currentDate).build();
@@ -617,7 +617,7 @@ public class SendgridServiceTest {
         EmailNotificationDetails emailNotificationDetails = EmailNotificationDetails.builder()
             .emailAddress("test@email.com")
             .servedParty(SERVED_PARTY_APPLICANT_SOLICITOR)
-            .docs(documentList.stream().map(s -> element(s)).collect(Collectors.toList()))
+            .docs(documentList.stream().map(s -> element(s)).toList())
             .attachedDocs(String.join(",", documentList.stream().map(a -> a.getDocumentFileName()).collect(
                 Collectors.toList())))
             .timeStamp(currentDate).build();
@@ -707,7 +707,7 @@ public class SendgridServiceTest {
         EmailNotificationDetails emailNotificationDetails = EmailNotificationDetails.builder()
             .emailAddress("test@email.com")
             .servedParty(SERVED_PARTY_APPLICANT_SOLICITOR)
-            .docs(documentList.stream().map(s -> element(s)).collect(Collectors.toList()))
+            .docs(documentList.stream().map(s -> element(s)).toList())
             .attachedDocs(String.join(",", documentList.stream().map(a -> a.getDocumentFileName()).collect(
                 Collectors.toList())))
             .timeStamp(currentDate).build();
